--- a/alinea.html
+++ b/alinea.html
@@ -9,7 +9,6 @@
   <header>
   <h1> Alinea </h1>
   </header>
-  <div role="main">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -23,9 +22,10 @@
   <img src="alinea_dish3.jpg" alt="A spread at Alinea">
   <img src="alinea_dish4.jpg" alt="Another spread at Alinea">
   <img src="alinea_dish5.jpg" alt="An Alinea entree">
-
+<main>
   <h3>Alinea means "the start of a new train of thought".</h3>
   <p>The three Michelin star restaurant located in Chicago, Illinois is helmed by chef Grant Achatz. Alinea focuses on the holistic sensory experience, often praised for its creative and visionary dishes. This can be presented by everything from scented vapors, sizzling charcoal, and tableside preparations. The atmosphere of Alinea is often described as more of a party than an uptight crowd. The feeling of the whimsical dishes are reflected in the service and experience at large.</p>
-</div>
+</main>
+
   </body>
 </html>
