--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <a class="skip-main" href="#main" > Skip to Content </a>
-    <div role="main">
     <header>
     <h1>
       Welcome to Top Bites
@@ -44,10 +43,13 @@
           <p class="nav_text">Sukiyabashi Jiro in Tokyo, Japan</p>
       </ul>-->
     </nav>
-
+    <main>
     <h4>
        A brief tour of the best eateries in the world
     </h4>
-  </div>
+  </main>
+  <footer>
+    <p> This site was created as a project in a course called SI 339.</p>
+  </footer>
   </body>
 </html>
