--- a/osteria.html
+++ b/osteria.html
@@ -9,7 +9,6 @@
   <header>
   <h1> Osteria Francescana </h1>
   </header>
-  <div role="main">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -20,9 +19,9 @@
 
   <img src="osteria_dish1.jpg" alt="A dish from Osteria Francescana">
   <img src="osteria_dish2.jpg" alt="A colorful dish from Osteria Francescana">
-
+<main>
   <h3>Osteria Francescana serves a contemporary Italian fare.</h3>
   <p>Osteria Francescana has three Michelin stars and is often hailed as the best restaurant in the world. Chef Massimo Bottura--and by extension, Osteria Francescana's philosophy--is clearly stated on the website: "Our kitchen is not a list of ingredients or demonstration of technical abilities. It is a narration of the Italian landscape and our passions. Cooking is a collision of ideas, techniques, and cultures. It is not mathematical. It is emotional." The dishes reflect Chef Bottura's visionary approach to Italian cuisine. In its early days, the restaurant nearly closed due to culinary conservatives' critique.</p>
-</div>
+</main>
   </body>
 </html>
